sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '<-' expected but ')' found.
	for(i >- nbr-2 to 0){
                           ^AlgBubbleSort2:13: error: illegal start of simple expression
}
^